--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <app-root class="w-full"></app-root>
+    <app-root class="w-full text-txt"></app-root>
   </body>
 </html>
