--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Steam</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.cdnfonts.com/css/motiva-sans" rel="stylesheet" />
+    <link
+      href="https://fonts.cdnfonts.com/css/motiva-sans-text"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
